Update teavm